# pytest-timestamps

./: README.md  README.rst  pyproject.toml
.github/workflows/: ci.yml
pytest_timestamps/: plugin.py  reporter.py  timestamp.py
tests/: test_plugin.py  test_times.py
