[tool.poetry]
name = "pytest-timestamps"
version = "0.2.1"
description = "A simple plugin to view timestamps for each test"
authors = ["TJ <tbruno25@gmail.com>"]
packages = [{ include = "pytest_timestamps" }]

[tool.poetry.dependencies]
python = ">=3.8, <4.0"
pytest = "^7.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.287"
black = "^23.9.1"
mypy = "^1.5.1"

[tool.poetry.plugins."pytest11"]
timestamps = "pytest_timestamps.plugin"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.tox]
legacy_tox_ini = """
    [tox]
    isolated_build = true

    env_list =
        py37
        py38
        py39
        py310

    [gh-actions]
    python =
        3.7: py37
        3.8: py38
        3.9: py39
        3.10: py310

    [testenv]
    allowlist_externals = 
        poetry
    commands =
        poetry install --only dev
        poetry run pytest -v
"""
