[tool.poetry]
name = "pytest-timestamps"
version = "0.2.1"
description = "A simple plugin to view timestamps for each test"
authors = ["TJ <tbruno25@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8, <4.0"
pytest = "^7.3"

[tool.poetry.group.dev.dependencies]
freezegun = "^1.2.2"

[tool.poetry.plugins."pytest11"]
timestamps = "pytest_timestamps.plugin"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"